fixed css being unreadable and added fonts

--- a/portfolio.css
+++ b/portfolio.css
@@ -1,14 +1,16 @@
-body{
-    margin: 0;
-    font-family: "Montserrat", serif;
-}
 header{
     background-color: white;
 }
-p {
-    color: pink;
-    font-family: "Montserrat", serif;
+header img{
+    padding: 50px;
+}
+header h1{
+    font-family: "Cabin", sans-serif;
+    font-weight: 600;
     font-size: 50px;
-    padding: 5px;
 }
 
+body{
+    margin: 0;
+    font-family: "Montserrat", san-serif;
+}
